--- a/app/RoutingClient/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/app/RoutingClient/en.lproj/MainStoryboard_iPhone.storyboard
@@ -43,7 +43,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="New" image="second" id="6"/>
+                    <tabBarItem key="tabBarItem" title="New" id="6"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="12" sceneMemberID="firstResponder"/>
             </objects>
@@ -70,9 +70,6 @@
             <point key="canvasLocation" x="132" y="180"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="second" width="16" height="16"/>
-    </resources>
     <classes>
         <class className="CustomerViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/CustomerViewController.h"/>
